<resources>
    <string name="app_name">Service Reports</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client">Client</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="client_type">Client Type</string>
    <string name="equipments">Equipments</string>
    <string name="total">Total</string>
    <string name="add_equipment">Equipment</string>
    <string name="begin_time">Begin Time</string>
    <string name="end_time">End Time</string>
    <string name="service_reports">Service Reports</string>
    <string name="activities">Activities</string>
    <string name="expenses">Expenses</string>
    <string name="clients">Clients</string>
    <string name="expenses_reports">Expenses Reports</string>
    <string name="activities_reports">Activities Reports</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="service_activity">Service Activity</string>
    <string name="settings">Settings</string>
    <string name="travel_time">Travel time</string>
    <string name="enter_decimal">Enter a decimal number</string>
    <string name="travel_kms">Travel distance</string>
    <string name="add_activity_description">Activity description</string>
    <string name="add_notes">Notes</string>
    <string name="fail_save_item">Activity not saved. Please try again. If fails again, restart app.</string>
    <string name="travel_distance">Travel Distance</string>
    <string name="error">Error</string>
    <string name="time_flow_error">"End time must be after Begin time."</string>
    <string name="new_client">-- New client --</string>
    <string name="ok">OK</string>
    <string name="hours">Hours</string>
</resources>
