<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_activities"
            android:title="@string/activities" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_expenses"
            android:title="@string/expenses" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_customers"
            android:title="@string/clients" />
    </group>

    <item android:title="Reports">
        <menu>
            <item
                android:id="@+id/nav_report_expenses"
                android:title="@string/expenses_reports" />
            <item
                android:id="@+id/nav_report_activities"
                android:title="@string/activities_reports" />
        </menu>
    </item>



        <item
        android:id="@+id/nav_settings"
        android:title="Settings" />


</menu>
